# neutron-docker-plugin

./: .gitignore  Examples.md  README.md  index.html  params.json  requirements.txt  setup.cfg  setup.py
etc/: neutron_docker_plugin.conf
neutrondocker/: neutron_docker_plugin.py  osclient.py
tools/: install_docker.sh  install_openstack.sh
