[metadata]
name = neutron_docker_plugin
version = 0.1
summary = Using neutron as docker network plugin
author = feisky
author-email = feiskyer@gmail.com
classifier =
    Environment :: OpenStack and Docker
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
    neutrondocker
data_files =
    /etc/docker = 
    etc/neutron_docker_plugin.conf

[entry_points]
console_scripts =
    neutron-docker = neutrondocker.neutron_docker_plugin:main

